syntax = "proto3";

package job;

option go_package = "internal/proto/jobpb";

service JobService {
    rpc CreateJob(CreateJobRequest) returns (JobResponse);
    rpc ModifyJob(ModifyJobRequest) returns (JobResponse);
    rpc CancelJob(CancelJobRequest) returns (JobResponse);
    rpc TriggerNow(TriggerNowRequest) returns (JobResponse);
}

message CreateJobRequest {
    string idempotencey_key = 1;
    string job_type = 2;
    string schedule_at = 3;
    bytes payload = 4;
}

message ModifyJobRequest {
    string job_id = 1;
    string idempotency_key = 2;
    bytes payload = 3;
}

message CancelJobRequest {
    string job_id = 1;
}

message TriggerNowRequest {
    string job_id = 1;
}

message JobResponse {
    string job_id = 1;
    string status = 2;
}